lib/nails_derive/tests/ui/from-request-enum.stderr
error: FromRequest cannot be derived for enums or unions
 --> $DIR/from-request-enum.rs:4:1
  |
4 | #[nails(path = "/api/posts/{id}")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Could not compile `nails_derive-tests`.
